--- a/personal_website/html/cv.html
+++ b/personal_website/html/cv.html
@@ -7,7 +7,7 @@
     <title>MY RESUME</title>
     <style>
         body {
-  background-image: url('images/0_pviKnLzMksaD0KCR.jpeg');
+  background-image: url('../images/0_pviKnLzMksaD0KCR.jpeg');
 }
     </style>
     <style>
