--- a/personal_website/html/cv.html
+++ b/personal_website/html/cv.html
@@ -15,7 +15,7 @@
           border:1px solid black;
         }
         </style>
-    <link rel="icon" href="images/objective-lens-icon-with-six-rainbow-colors-vector.jpg">
+    <link rel="icon" href="../images/objective-lens-icon-with-six-rainbow-colors-vector.jpg">
     <style>
        footer {
   text-align: center;
