Updated aboutme page

--- a/personal_website/html/aboutme.html
+++ b/personal_website/html/aboutme.html
@@ -167,11 +167,16 @@ a:hover {
         <h1>Where I'm From</h1>
         <p>Right Now I am residing in Bangalore,Karnataka but I was born in Vizag, Andhra Pradesh.</p>
       </section> 
-      </center>
       <section class="questions-section">
         <h1>My Goal?</h1>
         <p>My next goal after college is to get into a foreign university in the US and learn more about my favorite subjects.</p>
         <h1>More About Me</h1>
+	<h2>My Achievements</h2>
+        <ol>
+            <li><b>Won 2nd place with my team in a Football Tournament.</b></li>
+            <li><b>Won 2nd place in a Quiz Competition on Current Affairs.</b></li>
+            <li><b>Won 1st place for my school in Intra-School Cricket Tournament.</b></li>
+        </ol>
         <h2>My Favorite Hobbies</h2>
         <ol>
             <li><b>Playing Football and Cricket.</b></li>
