--- a/personal_website/html/cv.html
+++ b/personal_website/html/cv.html
@@ -102,7 +102,7 @@
           <td>I am an expert in data entry and work related to Excel.</td>
         </tr>
         <tr>
-            <td>I am a good team player and ready to help my team in any critical situations.</td>
+            <td>I am a good team player and ready to help my team in any critical situation.</td>
         </tr>
         <tr>
             <td>I am good with Programming Languages like C and Python.</td>
