Updated Index Page

--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -151,7 +151,7 @@ footer {
     <p>&copy 2021-2025</p>
     <p>Author : K Sri Sai Nitin</p>
     <p>All Rights Reserved.</p>
-    <p> Contact me on karakanitin76@gmail.com</p>
+    <p> Contact me on : karakanitin76@gmail.com</p>
 </footer>  
 </center>   
 </body>
