--- a/anokha/index.html
+++ b/anokha/index.html
@@ -7,7 +7,7 @@
     <title>WELCOME TO ANOKHA</title>
     <style>
         body{
-       background-image: url('../images/wp7213368.webp');
+       background-image: url('images/wp7213368.webp');
     }
     </style>
     <style>
@@ -89,7 +89,7 @@
     <link rel="icon" href="../images/favicon.jpeg">
 </head>
 <body>   
-  <img src="../images/logo-colored.svg" alt="Amrita" style="background-color: antiquewhite;"> 
+  <img src="images/logo-colored.svg" alt="Amrita" style="background-color: antiquewhite;"> 
   <div class="header">
     
 <div class="nav-right">
@@ -110,7 +110,7 @@
     <br>
     <br>
     <center>
-        <img src="../images/7005-3-xixq6ks7tdijdh4u0e27eo.jpg">
+        <img src="images/7005-3-xixq6ks7tdijdh4u0e27eo.jpg">
     </center>
     <br>
     <br>
@@ -136,7 +136,7 @@
     <br>
     <br>
     <center>
-    <a href="../html/registration.html" target="_blank">
+    <a href="html/registration.html" target="_blank">
         <button class="button button1">REGISTER HERE</button></a>
            <br>
            </center>
