--- a/anokha/index.html
+++ b/anokha/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
+    <meta http-equiv="X-UA-Compatible" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELCOME TO ANOKHA</title>
     <style>
@@ -86,7 +86,7 @@
            color: rgb(255, 127, 150);
         }
         </style>
-    <link rel="icon" href="../images/favicon.jpeg">
+    <link rel="icon" href="images/favicon.jpeg">
 </head>
 <body>   
   <img src="images/logo-colored.svg" alt="Amrita" style="background-color: antiquewhite;"> 
