--- a/personal_website/html/cv.html
+++ b/personal_website/html/cv.html
@@ -131,7 +131,7 @@
             <td>I am interested in developing my language skills to converse well with others. </td>
         </tr>
         <tr>
-            <td>I am interested in reading new novels which will help me visualize well.</td>
+            <td>I am interested in travelling to places around the world and explore them.</td>
         </tr>
       </table>
       <br>
