--- a/assignments/registrationform assignment-2/index.html
+++ b/assignments/registrationform assignment-2/index.html
@@ -72,10 +72,12 @@ body {
 <body>
   <script>
     function myFunction() {
-    alert("Your submission has been recorded");
-    }
-    </script>
-  <img src="images/logo-colored.svg" alt="Amrita">
+    alert("You have successfully registered for the competition.");
+    }
+  </script>
+   
+
+<img src="images/logo-colored.svg" alt="Amrita">
 <div class= "flex-container">
     <div class="columnleft" class="center">
       <center>
@@ -98,15 +100,19 @@ body {
     <form class= "form">
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>First Name</b></label>
       <div>
-      <input type= "text" placeholder="Enter your first name" name="name" class="space">
+      <input type= "text" placeholder="Enter your first name" name="name" class="space" required>
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Last Name</b></label>
       <div>
-      <input type= "text" placeholder="Enter your last name" name="name" class="space">
+      <input type= "text" placeholder="Enter your last name" name="name" class="space" required>
       </div>
-      <label for= "name" style="color:rgb(255, 0, 0);" ><b>College</b></label>
+      <label for= "name" style="color:rgb(255, 0, 0);" ><b>College Name</b></label>
       <div>
-      <input type= "text" placeholder="Enter your college name" name="name" class="space">
+      <input type= "text" placeholder="Enter your college name" name="name" class="space" required>
+      </div>
+      <label for= "name" style="color:rgb(255, 0, 0);" ><b>Team Name</b></label>
+      <div>
+      <input type= "text" placeholder="Enter your team name" name="name" class="space" required>
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Course</b></label>
       <div>
@@ -127,7 +133,18 @@ body {
       <br>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Year of Study</b></label>
       <div>
-      <input type= "text" placeholder="Which year of college" name="name" class="space">
+        <div>
+          <input type="radio" id="make" name="gender" value="male">
+          <label for="html">1st Year B.Tech</label><br>
+          <input type="radio" id="css" name="gender" value="female">
+          <label for="css">2nd Year B.Tech</label><br>
+          <input type="radio" id="others" name="gender" value="others">
+          <label for="javascript">3rd Year B.Tech</label><br>
+          <input type="radio" id="others" name="gender" value="others">
+          <label for="javascript">4th Year B.Tech</label><br>
+          <input type="radio" id="others" name="gender" value="others">
+          <label for="javascript">M.Tech </label>
+        </div>
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Skills:</b></label>
       <div>
@@ -144,18 +161,18 @@ body {
       </div>
       <label for="phone" style="color:red;"><b>Phone</b></label>
       <div>
-      <input type="tel" id= "phone" placeholder="Enter Mobile No." name= "name" class= "space">
+      <input type="tel" id= "phone" placeholder="Enter Mobile No." name= "name" class= "space" required>
       </div>
       <div>
       <label for= "email" style="color:red;"><b>Email</b></label>
       </div>
       <div>
-      <input type= "text" placeholder="email@address.com" name="email" class= "space">
+      <input type= "text" placeholder="email@address.com" name="email" class= "space" required>
       </div>
-      <label for= "start" style="color:red;"><b>Date of Birth</b></label>
+      <label for= "start" style="color:red;"><b>Date of Arrival</b></label>
       <div>
       <input type="date" id="start" name="start-date"
-      value= "2020-06-29" min="1997-06-29" max="2021-06-29" class= "space">
+      value= "2020-06-29" min="1997-06-29" max="2021-06-29" class= "space" required>
       </div>
       <label for= "availability" style="color:red;"><b> Gender</b></label>
       <div>
@@ -168,40 +185,50 @@ body {
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Username</b></label>
       <div>
-      <input type= "text" placeholder="Enter your username" name="name" class="space">
+      <input type= "text" placeholder="Enter your username" name="name" class="space" required>
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Password</b></label>
       <div>
-      <input type= "password" placeholder="Enter your password" name="name" class="space">
+      <input type= "password" placeholder="Enter your password" name="name" class="space" required>
       </div>
       <label for= "name" style="color:rgb(255, 0, 0);" ><b>Retype Password</b></label>
       <div>
-      <input type= "password" placeholder="Retype your password" name="name" class="space">
+      <input type= "password" placeholder="Retype your password" name="name" class="space" required>
       </div>
       <div>
         <br>
-        <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Address:</b></label></center>
-        <textarea id="website" name="anokhafeedback" rows="4" cols="50">
+        <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Personal Address</b></label></center>
+        <textarea id="website" name="anokhafeedback" rows="4" cols="50" required>
         </textarea>
       </div>
       <br>  
-      <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Upload your Aadhar Card:</b></label></center>
+      <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Upload your College ID Card:</b></label></center>
       <br>
       <center>
-  <input type="file" id="myfile" name="myfile"><br><br></center>
-  <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Subscribed to Amrita events?</b></label></center>
+  <input type="file" id="myfile" name="myfile" required><br><br></center>
+  <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Upload your Project Description:</b></label></center>
+      <br>
+      <center>
+  <input type="file" id="myfile" name="myfile" required><br><br></center>
+  <center><label for= "name" style="color:rgb(255, 0, 0);" ><b>Would you like to get updates regarding the events?</b></label></center>
   <br>
   <label class="toggle">
     <input class="toggle-checkbox" type="checkbox">
     <div class="toggle-switch"></div>
     <span class="toggle-label"></span>
   </label>
+  <br>
+  <br>
+  <br>
+  <input type="checkbox" id="terms" name="term" required>
+        <label or= "name" style="color:rgb(255, 0, 0);" for="vehicle2">By Creating an Account you agree to our <b>Terms and Conditions</b></label><br>
       <br>
+      
       <center>
         <br>
         <br>
         <center>
-        <button onclick="myFunction()" type= "submit" id= "submit">Register</button></
+        <button onclick="myFunction()" type= "submit" id= "submit">Register</button></center>
         </div>
       </center>
       </form>
