--- a/anokha/index.html
+++ b/anokha/index.html
@@ -105,8 +105,8 @@
     <br>
     <center>
         <h2 style="color:rgb(255, 0, 0);">WELCOME TO ANOKHA TECH FEST</h2>
-        <h4 style="color:red;">Start Date : 13th Feb<t Date : 13th Feb</h4>
-        <h4 style="color:red;">Last Date : 15th Feb</h4>
+        <h4 style="color:red;">Start Date : 13th Feb 2023<t Date : 13th Feb</h4>
+        <h4 style="color:red;">Last Date : 15th Feb 2023</h4>
         <h4 style="color:red;">Organizing College : Amrita School of Engineering</h4>
         <h4 style="color:red;">Campus : Coimbatore</h4>
         <h4 style="color:red;">Venue : Anokha Club near AB1</h4>
