--- a/anokha/html/events.html
+++ b/anokha/html/events.html
@@ -1,3 +1,10 @@
+<!--
+Author : K Sri Sai Nitin
+Created Date : 27 December 2023
+Update Date : 10 January 2023
+Description :Events of Anokha
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
